# vkwc

./: .gitignore  Makefile  README.md  build.sh  meson.build  out.txt  physac.h  render.c  render.h  stderr  stdout  surface.c  surface.h  tinywl.c  util.c  util.h  vkwc.c  vkwc.h
misc/: pixel_format.c
render/: vulkan.h
render/vulkan/shaders/: common.vert.h  postprocess.frag.h  postprocess.vert.h  quad.frag.h  texture.frag.h
vulkan/: error.c  error.h  intermediate.c  intermediate.h  pipeline.c  pipeline.h  pixel_format.c  render_pass.c  render_pass.h  renderer.c  texture.c  timer.c  timer.h  util.c  util.h  vulkan.c
vulkan/shaders/: blur.frag  common.vert  meson.build  postprocess.frag  postprocess.vert  quad.frag  simple_texture.frag  texture.frag  texture.vert
wlroots/: meson.build
wlroots/.cache/clangd/index/: addon.c.7D3E66E16CD794C8.idx  addon.h.E11CECA558318204.idx  allocator.c.0D7928D3A4EA581D.idx  allocator.h.3153A251CC837F76.idx  allocator.h.64122CA3F40B94D6.idx  array.c.D47C52813748141B.idx  array.h.83AB7C68FC89F137.idx  atomic.c.0A9BE2566EAE345D.idx  backend.c.1127765ED044AA59.idx  backend.c.35982C890E48421F.idx  backend.c.6EBFC5824C072E9F.idx  backend.c.932EF6550CC34828.idx  backend.c.9EC1BD598ACEC61E.idx  backend.c.ADDCC9900F8E7A8E.idx  backend.c.E9F719DEFB99B8B3.idx  backend.h.A5BEFD98C700266C.idx  backend.h.FBAB1542BC222BE6.idx  box.c.AC2A808B08FFCE2B.idx  box.h.8D9B100D0E67C408.idx  cat.c.26323B64C9F16EF4.idx  cat.h.DA2399386481873F.idx  cursor.c.C307CA1E16262BA3.idx  cursor_data.h.56945E96217A7CB0.idx  cvt.c.88AB81A056D468D9.idx  cvt.h.1FD0523248DC075B.idx  dmabuf-capture.c.9B3720A564551054.idx  dmabuf.c.9C8EAB9C8B527E49.idx  dmabuf.h.CB4EF4A4AB15E7ED.idx  dnd.c.CDAF17E48EFEAC58.idx  drm.c.57DA8C8639359573.idx  drm.h.040D26A0DB8FB061.idx  drm.h.6F42B9BC735703C1.idx  drm_dumb.c.D82A1D0B445DA8AC.idx  drm_dumb.h.562CD53CF245EA2F.idx  drm_format_set.c.B116D4D44EA87FC2.idx  drm_format_set.h.231198140A6ED2F8.idx  drm_format_set.h.BCB9C23D7DDD64AA.idx  edges.h.F7085FA8690D4BC5.idx  egl.c.8351BA3FA144EE9C.idx  egl.h.9CC470C9C3C7DD33.idx  (+279 more)
wlroots/include/render/: vulkan.h
wlroots/include/wlr/render/: wlr_renderer.h
wlroots/include/wlr/types/: wlr_screencopy_v1.h
wlroots/render/vulkan/: pixel_format.c  renderer.c  texture.c
wlroots/render/vulkan/shaders/: texture.frag
wlroots/types/: wlr_screencopy_v1.c
